[package]
name = "loong"
description = "I consent to the transfer of this crate to the first person who asks help@crates.io for it."
version = "0.1.1"
authors = ["Shen Lu <shenlu89dev@gmail.com>"]
edition = "2021"
repository = "https://github.com/shenlu89/loong"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3